--- a/src/components/table/table.component.scss
+++ b/src/components/table/table.component.scss
@@ -143,7 +143,7 @@ mat-icon {
 .btn-sm {
   font-family: ROBOTO-MEDIUM;
   border-radius: 10px;
-  padding:  20px;
+  padding: 20px;
 }
 
 .add {
@@ -156,4 +156,5 @@ mat-icon {
   font-size: 1.2rem;
   font-weight: 400;
   margin-top: 25px;
+  color: #76838f;
 }
