--- a/src/constants/colors.scss
+++ b/src/constants/colors.scss
@@ -10,3 +10,6 @@ $titleAnimationColor: #a94343;
 $sidebarBackgroundColor: #1c0f54;
 $sideMenuUnselectColor: #759bba;
 $iconColor: #76838f;
+
+$submitBtnColor: #007bff;
+$submitBtnHoverColor: #0056b3;
