--- a/src/pages/master/aos-user/brand-master/create-brand-master/create-brand-master.component.html
+++ b/src/pages/master/aos-user/brand-master/create-brand-master/create-brand-master.component.html
@@ -1,1 +1,15 @@
-<p>create-brand-master works!</p>
+<h2 class="title" mat-dialog-title>Add New Brand</h2>
+<mat-dialog-content>
+    <form [formGroup]="form" ngNativeValidate>
+        <div class="input-field">
+            <label for="name">Brand Name<span class="imp">*</span></label>
+            <input type="text" class="input-txt" formControlName="name" required>
+        </div>
+    </form>
+</mat-dialog-content>
+<mat-dialog-actions>
+    <div class="action-btns">
+        <button type="submit" (click)="submit()">Submit</button>
+        <button type="button" (click)="closeDialog()">Cancel</button>
+    </div>
+</mat-dialog-actions>
