--- a/src/pages/master/aos-user/item-category-master/create-item-category-master/create-item-category-master.component.html
+++ b/src/pages/master/aos-user/item-category-master/create-item-category-master/create-item-category-master.component.html
@@ -1,14 +1,15 @@
-<h2 mat-dialog-title>Add New Category</h2>
+<h2 class="title" mat-dialog-title>Add New Item Category</h2>
 <mat-dialog-content>
-    <form [formGroup]="form">
-        <br>
-        <mat-form-field appearance="outline">
-            <mat-label>Name</mat-label>
-            <input matInput formControlName="name">
-        </mat-form-field>
+    <form [formGroup]="form" ngNativeValidate>
+        <div class="input-field">
+            <label for="name">Item Category Name<span class="imp">*</span></label>
+            <input type="text" class="input-txt" formControlName="name" required>
+        </div>
     </form>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close type="button">Cancel</button>
-  <button mat-button (click)="submit()" type="submit">Submit</button>
+    <div class="action-btns">
+        <button type="submit" (click)="submit()">Submit</button>
+        <button type="button" (click)="closeDialog()">Cancel</button>
+    </div>
 </mat-dialog-actions>
