--- a/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.scss
+++ b/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.scss
@@ -11,7 +11,7 @@
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 15px 30px;
   }
 }
 
@@ -30,7 +30,7 @@ h3 {
 
   label {
     font-size: 0.875rem;
-    margin: 15px 0 5px;
+    margin: 5px 0 5px;
   }
 
   input,
@@ -63,16 +63,6 @@ h3 {
     color: red;
     margin-left: 5px;
   }
-}
-
-.input-field {
-  display: flex;
-  flex-direction: column;
-
-  label {
-    font-size: 0.875rem;
-    margin: 25px 0 5px;
-  }
 
   .input-container {
     position: relative;
@@ -81,7 +71,7 @@ h3 {
 
     input {
       flex: 1;
-      height: calc(2.0625rem + 2px); 
+      height: calc(2.0625rem + 2px);
       padding: 0.375rem 2.5rem 0.375rem 0.75rem;
       border: 1px solid #ced4da;
       border-radius: 0.25rem;
@@ -90,8 +80,8 @@ h3 {
 
     .toggle-password {
       position: absolute;
-      right: 0; 
-      top: 50%; 
+      right: 0;
+      top: 50%;
       transform: translateY(-50%);
       background: none;
       border: none;
@@ -138,30 +128,5 @@ h3 {
         background-color: #e2e6ea;
       }
     }
-  }
-
-  @media (max-width: 768px) {
-    flex-direction: column;
-    align-items: center;
-
-    button {
-      width: 100%;
-    }
-  }
-}
-
-@media (max-width: 1024px) {
-  .input-field {
-    flex: 1 1 calc(50% - 20px);
-  }
-}
-
-@media (max-width: 768px) {
-  .input-field {
-    flex: 1 1 calc(100% - 20px);
-  }
-
-  .container {
-    padding: 20px;
   }
 }
