--- a/src/pages/master/aos-user/brand-master/create-brand-master/create-brand-master.component.scss
+++ b/src/pages/master/aos-user/brand-master/create-brand-master/create-brand-master.component.scss
@@ -1,24 +1,10 @@
 @use "../../../../../constants/colors.scss" as color;
 
-.container {
-  width: 100%;
-  background-color: #fff;
-  padding: 10px 50px 25px;
-  display: flex;
-  flex-wrap: wrap;
-
-  form {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px 30px;
-  }
-}
-
-h3 {
-  font-family: ROBOTO-MEDIUM;
-  font-weight: 400;
-  color: #76838f;
+.title{
+    font-family: ROBOTO-MEDIUM;
+    color: color.$iconColor;
+    font-weight: 400;
+    font-size: 1.2rem;
 }
 
 .input-field {
@@ -33,8 +19,7 @@ h3 {
     margin: 5px 0 5px;
   }
 
-  input,
-  select {
+  input {
     height: calc(2.0625rem + 2px);
     padding: 0.375rem 0.75rem;
     border: 1px solid #ced4da;
@@ -44,85 +29,13 @@ h3 {
     color: #495057;
   }
 
-  input:focus,
-  select:focus {
+  input:focus {
     outline-color: #abc7ff;
-  }
-
-  select {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNCIgaGVpZ2h0PSIxNCIgdmlld0JveD0iMCAwIDE0IDE0Ij48cGF0aCBkPSJNMiA1bDYgNiA2LTZ6IiBmaWxsPSIjNTE1MTUxIi8+PC9zdmc+");
-    background-repeat: no-repeat;
-    background-position: right 10px center;
-    background-size: 12px;
   }
 
   .imp {
     color: red;
     margin-left: 5px;
-  }
-
-  .input-container {
-    position: relative;
-    display: flex;
-    align-items: center;
-
-    input {
-      flex: 1;
-      height: calc(2.0625rem + 2px);
-      padding: 0.375rem 2.5rem 0.375rem 0.75rem;
-      border: 1px solid #ced4da;
-      border-radius: 0.25rem;
-      font-size: 1rem;
-    }
-
-    .toggle-password {
-      position: absolute;
-      right: 0;
-      top: 50%;
-      transform: translateY(-50%);
-      background: none;
-      border: none;
-      cursor: pointer;
-
-      mat-icon {
-        font-size: 1.5rem;
-        color: color.$iconColor;
-      }
-    }
-  }
-}
-
-.file {
-  display: flex;
-  align-items: center;
-}
-
-.remove {
-  color: red;
-  margin-left: 15px;
-  cursor: pointer;
-}
-
-.fileBtn {
-  width: 120px;
-  padding: 0.5rem 1.5rem;
-  font-size: 1rem;
-  font-family: ROBOTO-LIGHT;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s ease, color 0.3s ease;
-
-  &[type="button"] {
-    background-color: color.$submitBtnColor;
-    color: white;
-
-    &:hover {
-      background-color: color.$submitBtnHoverColor;
-    }
   }
 }
 
@@ -130,7 +43,7 @@ h3 {
   display: flex;
   justify-content: flex-end;
   gap: 25px;
-  margin: 10px 0;
+  margin: -20px 0 20px;
 
   button {
     padding: 0.5rem 1.5rem;
@@ -142,17 +55,17 @@ h3 {
     transition: background-color 0.3s ease, color 0.3s ease;
 
     &[type="submit"] {
-      background-color: color.$submitBtnColor;
+      background-color: #007bff;
       color: white;
 
       &:hover {
-        background-color: color.$submitBtnHoverColor;
+        background-color: #0056b3;
       }
     }
 
     &[type="button"] {
       background-color: #f8f9fa;
-      color: #495057;
+      color: red;
       border: 1px solid #ced4da;
 
       &:hover {
