--- a/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.html
+++ b/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.html
@@ -55,7 +55,7 @@
     <div class="input-field"></div>
     <div class="action-btns">
       <button mat-flat-button type="submit">Submit</button>
-      <button mat-button type="button" style="color: red;padding: 0 20px;" (click)="navigateToListUserPage()">
+      <button mat-button type="button" (click)="navigateToListUserPage()">
         Cancel
       </button>
     </div>
