--- a/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.scss
+++ b/src/pages/master/aos-user/user-master/create-user-master/create-user-master.component.scss
@@ -121,7 +121,7 @@ h3 {
 
     &[type="button"] {
       background-color: #f8f9fa;
-      color: #495057;
+      color: red;
       border: 1px solid #ced4da;
 
       &:hover {
