--- a/src/pages/master/aos-user/gst-rate-master/create-gst-rate-master/create-gst-rate-master.component.html
+++ b/src/pages/master/aos-user/gst-rate-master/create-gst-rate-master/create-gst-rate-master.component.html
@@ -1,24 +1,19 @@
 <div class="container">
-  <form [formGroup]="form" (ngSubmit)="submit()">
-    <div class="form-row">
-      <mat-form-field appearance="outline">
-        <mat-label>GST Rate(in %)</mat-label>
-        <input matInput formControlName="rate" />
-      </mat-form-field>
+  <header>
+    <h3>Create GST</h3>
+  </header>
+  <form [formGroup]="form">
+    <div class="input-field">
+      <label for="rate">GST Rate(in %)<span class="imp">*</span></label>
+      <input type="number" class="input-txt" formControlName="rate" required>
     </div>
-    <div class="form-row">
-      <mat-form-field appearance="outline">
-        <mat-label>GST Applicable from</mat-label>
-        <input matInput [matDatepicker]="dp" formControlName="applicableDt" />
-        <mat-datepicker-toggle matIconSuffix [for]="dp"></mat-datepicker-toggle>
-        <mat-datepicker #dp></mat-datepicker>
-      </mat-form-field>
+    <div class="input-field">
+      <label for="rate">GST Applicable From<span class="imp">*</span></label>
+      <input type="date" class="input-txt" formControlName="applicableDt" required>
     </div>
-    <div class="form-row">
-      <button mat-flat-button type="submit">Submit</button>
-      <button mat-button type="button" (click)="navigateToListGstPage()">
-        Cancel
-      </button>
+    <div class="action-btns">
+      <button type="submit" (click)="submit()">Submit</button>
+      <button type="button" (click)="navigateToListGstPage()">Cancel</button>
     </div>
   </form>
 </div>
