--- a/src/pages/master/aos-user/gst-rate-master/create-gst-rate-master/create-gst-rate-master.component.scss
+++ b/src/pages/master/aos-user/gst-rate-master/create-gst-rate-master/create-gst-rate-master.component.scss
@@ -1,46 +1,91 @@
 @use "../../../../../constants/colors.scss" as color;
 
 .container {
-  width: 80%;
-  margin: 25px auto;
-  //   background-color: color.$bodyBackgroundColor;
-}
-
-.form-row {
+  width: 50%;
+  background-color: #fff;
+  padding: 10px 50px 25px;
   display: flex;
   flex-wrap: wrap;
-  gap: 16px;
+  margin: 25px auto;
+
+  form {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px 30px;
+  }
 }
 
-mat-form-field {
-  flex: 1 1 calc(50% - 8px);
-  max-width: 300px;
+h3 {
+  font-family: ROBOTO-MEDIUM;
+  font-weight: 400;
+  color: #76838f;
 }
 
-.flex {
+.input-field {
+  flex: 1 1 calc(33.333% - 20px);
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  justify-content: flex-start;
-  margin-right: 10px;
-  
-  button {
-    margin: 5px;
+  color: #495057;
+  font-family: ROBOTO-LIGHT;
+
+  label {
+    font-size: 0.875rem;
+    margin: 5px 0 5px;
   }
 
-  p {
-    margin: 0;
+  input {
+    height: calc(2.0625rem + 2px);
+    padding: 0.375rem 0.75rem;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    font-size: 1rem;
+    background-color: #fff;
+    color: #495057;
   }
 
-  .remove {
+  input:focus {
+    outline-color: #abc7ff;
+  }
+
+  .imp {
     color: red;
-    margin-left: 15px;
-    cursor: pointer;
+    margin-left: 5px;
   }
 }
 
-@media (max-width: 768px) {
-  .form-row mat-form-field {
-    flex: 1 1 100%;
+.action-btns {
+  display: flex;
+  justify-content: flex-end;
+  gap: 25px;
+  margin: 10px 0;
+
+  button {
+    padding: 0.5rem 1.5rem;
+    font-size: 1rem;
+    font-family: ROBOTO-LIGHT;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+
+    &[type="submit"] {
+      background-color: #007bff;
+      color: white;
+
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
+
+    &[type="button"] {
+      background-color: #f8f9fa;
+      color: red;
+      border: 1px solid #ced4da;
+
+      &:hover {
+        background-color: #e2e6ea;
+      }
+    }
   }
 }
